<resources>
    <string name="app_name">Cherish</string>
    <string name="email">Email</string>
    <string name="pass">Password</string>
    <string name="c_pass">Confirm password</string>
    <string name="signin">Sign in</string>
    <string name="signup">Sign up</string>
    <string name="forget">Forgot password?</string>

    <!-- OnBoard Screen. -->

    <string name="ob_header1">Capture life little moments</string>
    <string name="ob_header2">Unique digital media timeline</string>
    <string name="ob_header3">Beautiful display moments</string>

    <string name="ob_get_started">GET STARTED</string>

    <string name="ob_desc1">Can easily document your memories in all types of media</string>
    <string name="ob_desc2">Revolutionising the way we capture, secure our children</string>
    <string name="ob_desc3">Share with family and close friends, privately from the first scan</string>

    <!--Array of stepper-->
    <string-array name="stepLabels">
        <item>Complete</item>
        <item>Confirm phone</item>
        <item>Avatar</item>
        <item>Find People</item>
    </string-array>
    <string name="title_activity_profile">Profile</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="action_example">Example action</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="smtb_content">
    Hello SmartToolbar. Hello SmartToolbar. Hello SmartToolbar. Hello SmartToolbar.
    Hello SmartToolbar. Hello SmartToolbar. Hello SmartToolbar. Hello SmartToolbar.
    Hello SmartToolbar. Hello SmartToolbar. Hello SmartToolbar. Hello SmartToolbar.
    Hello SmartToolbar. Hello SmartToolbar. Hello SmartToolbar. Hello SmartToolbar.
    Hello SmartToolbar. Hello SmartToolbar. Hello SmartToolbar. Hello SmartToolbar.
    Hello SmartToolbar. Hello SmartToolbar. Hello SmartToolbar. Hello SmartToolbar.
    Hello SmartToolbar. Hello SmartToolbar. Hello SmartToolbar. Hello SmartToolbar.
    Hello SmartToolbar. Hello SmartToolbar. Hello SmartToolbar. Hello SmartToolbar.
    Hello SmartToolbar. Hello SmartToolbar. Hello SmartToolbar. Hello SmartToolbar.
    Hello SmartToolbar. Hello SmartToolbar. Hello SmartToolbar. Hello SmartToolbar.
    Hello SmartToolbar. Hello SmartToolbar. Hello SmartToolbar. Hello SmartToolbar.
    Hello SmartToolbar. Hello SmartToolbar. Hello SmartToolbar. Hello SmartToolbar.
    Hello SmartToolbar. Hello SmartToolbar. Hello SmartToolbar. Hello SmartToolbar.
    Hello SmartToolbar. Hello SmartToolbar. Hello SmartToolbar. Hello SmartToolbar.
    Hello SmartToolbar. Hello SmartToolbar. Hello SmartToolbar. Hello SmartToolbar.
    Hello SmartToolbar. Hello SmartToolbar. Hello SmartToolbar. Hello SmartToolbar.
    Hello SmartToolbar. Hello SmartToolbar. Hello SmartToolbar. Hello SmartToolbar.
    Hello SmartToolbar. Hello SmartToolbar. Hello SmartToolbar. Hello SmartToolbar.
    Hello SmartToolbar. Hello SmartToolbar. Hello SmartToolbar. Hello SmartToolbar.
    Hello SmartToolbar. Hello SmartToolbar. Hello SmartToolbar. Hello SmartToolbar.
    Hello SmartToolbar. Hello SmartToolbar. Hello SmartToolbar. Hello SmartToolbar.
    Hello SmartToolbar. Hello SmartToolbar. Hello SmartToolbar. Hello SmartToolbar.
    Hello SmartToolbar. Hello SmartToolbar. Hello SmartToolbar. Hello SmartToolbar.
    Hello SmartToolbar. Hello SmartToolbar. Hello SmartToolbar. Hello SmartToolbar.
    Hello SmartToolbar. Hello SmartToolbar. Hello SmartToolbar. Hello SmartToolbar.
    Hello SmartToolbar. Hello SmartToolbar. Hello SmartToolbar. Hello SmartToolbar.
    Hello SmartToolbar. Hello SmartToolbar. Hello SmartToolbar. Hello SmartToolbar.
    Hello SmartToolbar. Hello SmartToolbar. Hello SmartToolbar. Hello SmartToolbar.
    Hello SmartToolbar. Hello SmartToolbar. Hello SmartToolbar. Hello SmartToolbar.
    Hello SmartToolbar. Hello SmartToolbar. Hello SmartToolbar. Hello SmartToolbar.
    Hello SmartToolbar. Hello SmartToolbar. Hello SmartToolbar. Hello SmartToolbar.
    Hello SmartToolbar. Hello SmartToolbar. Hello SmartToolbar. Hello SmartToolbar.
    Hello SmartToolbar. Hello SmartToolbar. Hello SmartToolbar. Hello SmartToolbar.
    Hello SmartToolbar. Hello SmartToolbar. Hello SmartToolbar. Hello SmartToolbar.
    Hello SmartToolbar. Hello SmartToolbar. Hello SmartToolbar. Hello SmartToolbar.
    Hello SmartToolbar. Hello SmartToolbar. Hello SmartToolbar. Hello SmartToolbar.
    Hello SmartToolbar. Hello SmartToolbar. Hello SmartToolbar. Hello SmartToolbar.
    Hello SmartToolbar. Hello SmartToolbar. Hello SmartToolbar. Hello SmartToolbar.
    Hello SmartToolbar. Hello SmartToolbar. Hello SmartToolbar. Hello SmartToolbar.
    Hello SmartToolbar. Hello SmartToolbar. Hello SmartToolbar. Hello SmartToolbar.
    Hello SmartToolbar. Hello SmartToolbar. Hello SmartToolbar. Hello SmartToolbar.
    Hello SmartToolbar. Hello SmartToolbar. Hello SmartToolbar. Hello SmartToolbar.
    Hello SmartToolbar. Hello SmartToolbar. Hello SmartToolbar. Hello SmartToolbar.
    Hello SmartToolbar. Hello SmartToolbar. Hello SmartToolbar. Hello SmartToolbar.
    Hello SmartToolbar. Hello SmartToolbar. Hello SmartToolbar. Hello SmartToolbar.
    Hello SmartToolbar. Hello SmartToolbar. Hello SmartToolbar. Hello SmartToolbar.
    Hello SmartToolbar. Hello SmartToolbar. Hello SmartToolbar. Hello SmartToolbar.
    Hello SmartToolbar. Hello SmartToolbar. Hello SmartToolbar. Hello SmartToolbar.
    Hello SmartToolbar. Hello SmartToolbar. Hello SmartToolbar. Hello SmartToolbar.
    Hello SmartToolbar. Hello SmartToolbar. Hello SmartToolbar. Hello SmartToolbar.
    Hello SmartToolbar. Hello SmartToolbar. Hello SmartToolbar. Hello SmartToolbar.
    Hello SmartToolbar. Hello SmartToolbar. Hello SmartToolbar. Hello SmartToolbar.
    Hello SmartToolbar. Hello SmartToolbar. Hello SmartToolbar. Hello SmartToolbar.
    Hello SmartToolbar. Hello SmartToolbar. Hello SmartToolbar. Hello SmartToolbar.
    Hello SmartToolbar. Hello SmartToolbar. Hello SmartToolbar. Hello SmartToolbar.
    Hello SmartToolbar. Hello SmartToolbar. Hello SmartToolbar. Hello SmartToolbar.
    Hello SmartToolbar. Hello SmartToolbar. Hello SmartToolbar. Hello SmartToolbar.
    Hello SmartToolbar. Hello SmartToolbar. Hello SmartToolbar. Hello SmartToolbar.
    Hello SmartToolbar. Hello SmartToolbar. Hello SmartToolbar. Hello SmartToolbar.
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
